fix: fixed header z-index and opacity

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,13 +7,14 @@ header nav {
   align-items: center;
   padding: 0 2rem;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   background-color: var(--background-color);
   width: 100vw;
   height: var(--nav-height);
   box-sizing: border-box;
   font-family: var(--body-font-family);
   border-bottom: 1px solid #ccc;
+  opacity: 0.95;
 }
 
 header nav a:any-link {
